k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
      - name: postgre
        image: postgres:14.3
        ports:
          - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    # matchLabels:
    app: postgre
  ports:
  - protocol: TCP  # protocolo padrao
    port: 5432
    targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubenews
spec:
  selector:
    matchLabels:
      app: kubenews
  template:
    metadata:
      labels:
        app: kubenews
    spec:
      containers:
      - name: kubenews
        image: leommiranda/kube-news:latest
        ports:
          - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: kubenews
spec:
  selector:
    # matchLabels:
    app: kubenews
  ports:
  - protocol: TCP  # protocolo padrao
    port: 80
    targetPort: 8080
    nodePort: 30000
  type: LoadBalancer
