k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pages-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx
  # ingressClassName: kong
  rules:
    # - host: "kube-news.[EXTERNAL-IP].nip.io"
    # - host: "[EXTERNAL-IP].nip.io"
    - host: "134.209.128.120.nip.io"
      http:
        paths:
        - path: /
          pathType: Prefix
          # pathType: Exact
          backend:
            service:
              name: kubenews
              port:
                number: 80
